fix: icon alignment in Select's options list

--- a/packages/css/src/less/circles.less
+++ b/packages/css/src/less/circles.less
@@ -13,7 +13,8 @@
 
 li,
 li > a {
-  > .circle:first-child {
+  > .circle:first-child,
+  > .tw-icon:first-child {
     margin-right: var(--spacer);
   }
 }
